# nostr-rs-relay

./: .build.yml  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  GNUmakefile  LICENSE  Makefile  README.md  build.rs  cargo.mk  config.toml  docker-compose.yml  flake.nix  macos_toggle_airplay.sh  mk-platform-agnostic-dockerfile.sh  npubsToPubkeys.sh  reverse-proxy.md  rustfmt.toml  sample.messages.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  docker-image.yml  publish-docker-image.yml  sync-fork.yml  test.yml
contrib/: nostr-rs-relay.service
docs/: database-maintenance.md  grpc-extensions.md  pay-to-relay.md  reverse-proxy.md  run-as-linux-system-process.md  user-verification-nip05.md
examples/nauthz/: Cargo.toml  build.rs
examples/nauthz/src/: main.rs
nauthz_server_example/: build.rs
nauthz_server_example/src/: main.rs
proto/: nauthz.proto
src/: account.rs  authentication.rs  cli.rs  close.rs  config.rs  conn.rs  db.rs  delegation.rs  error.rs  event.rs  hexrange.rs  http.rs  info.rs  lib.rs  main.rs  nauthz.rs  negentropy.rs  nip05.rs  notice.rs  ohttp.rs  payment.rs  proto.rs  protostream.rs  request.rs  schema.rs  server.rs  subscription.rs  tags.rs  utils.rs  validation.rs
src/messages/: commands.rs  event.rs  mod.rs  responses.rs  subscription.rs  tags.rs  testvec.rs
src/payment/: cln_rest.rs  lightning_address.rs  lnbits.rs  mod.rs
src/repo/: common.rs  mod.rs  postgres.rs  postgres_migration.rs  sqlite.rs  sqlite_migration.rs
templates/: account.html  base.html  invoice.html  join.html  terms.html
tests/: cli.rs  conn.rs  integration_test.rs  postgres_integration.rs  sqlite_addressable_delete.rs
tests/common/: mod.rs
